Post-v3.6.0
--------------------
   - TLS:
     * Added support for TLS Server Name Indication (SNI) with the new
       --ssl-server-name option.  This allows specifying the server name
       for SNI, which is useful when connecting through proxies or service
       meshes where the connection endpoint differs from the intended
       server name.  Without this option, the hostname from the connection
       string is used for SNI, as before.
   - Userspace datapath:
     * Conntrack now supports the FTP commands EPSV and EPRT with IPv4
       connections, instead of limiting these commands to IPv6 only.
   - DPDK:
     * OVS validated with DPDK 24.11.3.
   - OVSDB-IDL:
     * New ovsdb_idl_txn_assert_read_only() interface to mark transactions
       as read-only and trigger assertion failure when application attempts
       to modify the database data through this transaction.


v3.6.0 - 18 Aug 2025
--------------------
   - Bonding:
     * Bond rebalancing log messages of INFO log level are highly reduced: they
       are now printed once in rebalance run.  Previous detailed log messages
       have been moved to the DBG log level.
   - DPDK:
     * New debug appctl command 'dpdk/get-memzone-stats'.
     * Removed upper limit for the number of rx/tx descriptors (n_r/txq_desc).
     * OVS validated with DPDK 24.11.2.
   - OVSDB performance:
     * Table indexes are now used for lookups while processing certain database
       queries (e.g. 'select' operation).
     * JSON data structures are re-worked to allow storing short strings and
       arrays in-place, improving performance and the total memory usage.
   - OVSDB-IDL:
     * New functions <db>_<table>_<column>_server_type() that allow checking
       the server-side type of a particular column.  Can be used for checking
       type constraints when the server schema is older or newer than that of
       the client.
   - ovs-ctl:
     * Added a new option, --oom-score=<score>, to set the daemons' Linux